Change log for zeit.web
=======================

2.85 (unreleased)
-----------------

- FIX: Provide fallback date and hide copyright on Storystreams

- FIX: Escape double quotes in CeleraOne script function arguments

- BUG-423: Add AdController keyword 'diuqilon' for tablet in portrait mode only

- FIX: Constrain footer inline script to minimal framebuilder


2.84 (2016-05-30)
-----------------

- ZON-2638: Introduce minimal version of ZON framebuilder

- ZON-2532: Determine milestone layout from tldr_milestone setting on teasered article

- ZON-3046: Use update signals on desktop only

- ZON-3071: Track page assets in webtrekk

- MAINT: Update ZMO header and navigation

- MAINT: Add Tonic-Magazin and Edition F to noindex list


2.83.1 (2016-05-24)
-------------------

- HOTFIX: Be defensive about missing meta files for article images

- ZON-1934: Polish news teaser and render news page


2.83 (2016-05-20)
-----------------

- FIX: Remove advertorial kicker prefix


2.82 (2016-05-19)
-----------------

- FIX: Fix tracking toolbox

- MAINT: Validate sharing menu


2.81.1 (2016-05-17)
-------------------

- MAINT: Transmit separate SSO register URL to rawr


2.81 (2016-05-17)
-----------------

- ZON-3072: Change ZEIT Campus flyout and toolbox clicktracking identifier

- ZON-3056: Add microdata for ZEIT Campus teasers

- ZON-2659: Use HTML5 video player for inline videos

- ZON-2756: Add webtrekk customer ID to ZMO

- BUG-417: Exclude Campus articles from article lineage

- MAINT: Clean up ZMO templates

- MAINT: Transmit correct client IP address to bugsnag


2.80 (2016-05-11)
-----------------

- ZON-3057: Add new Ranking Area and Teaser Format for paginated ZCO CPs

- OPS-335: Improve health check (configurable via `health_check_with_fs`)

- MAINT: Add ZEIT Campus breadcrumbs

- MAINT: Check community health directly (without varnish)

- FIX: Be defensive about missing community maintenance config file

- FIX: Make square teaser fully clickable again

